--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack"] }
+rusqlite = { version = "0.33.0", optional = true }
+
+[features]
+server = ["dioxus/server", "dep:rusqlite"]
